// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SNAPSHOT should match snapshot for hover true 1`] = `
<div
  className="userCard"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    id="488edda9-f042-434f-8162-e4dddf7055f5"
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "column",
        "fontSize": "1.4rem",
        "height": "100%",
        "justifyContent": "space-around",
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <div
      className="userCard__header"
    >
      <div
        className="userCard__header_img"
      >
        <img
          alt="Mrs Emily Mortensen"
          src="https://randomuser.me/api/portraits/thumb/women/78.jpg"
        />
      </div>
      <div
        className="userCard__header_details"
      >
        <div>
          <span
            className="userCard__title"
          >
            Mrs Emily Mortensen 31
          </span>
        </div>
        <div
          className="bold"
        >
          <span>
            blackwolf380
          </span>
        </div>
        <div>
          <span>
            emily.mortensen@example.com
          </span>
        </div>
        <div>
          <span>
            94033936
          </span>
        </div>
        <div>
          <span>
            92381351
          </span>
        </div>
      </div>
    </div>
    <div
      className="userCard__more"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontWeight": "bold",
          }
        }
        type="button"
      >
        Load more
      </button>
    </div>
    <div
      className="userTooltip"
      data-testid="userTooltip"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "6rem",
        }
      }
    >
      <div
        className="userTooltip__arrow"
      />
      <span
        className="userTooltip__content"
      >
        8651 Tingstedet
      </span>
      <span
        className="userTooltip__content"
      >
        98755 Randers Nv Denmark
      </span>
      <span
        className="userTooltip__content"
      >
        Registered date :
        2017-05-09T01:55:53.657Z
      </span>
    </div>
  </div>
</div>
`;

exports[`test SNAPSHOT should match the snapshot for hover false 1`] = `
<div
  className="userCard"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    id="488edda9-f042-434f-8162-e4dddf7055f5"
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "column",
        "fontSize": "1.4rem",
        "height": "100%",
        "justifyContent": "space-around",
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <div
      className="userCard__header"
    >
      <div
        className="userCard__header_img"
      >
        <img
          alt="Mrs Emily Mortensen"
          src="https://randomuser.me/api/portraits/thumb/women/78.jpg"
        />
      </div>
      <div
        className="userCard__header_details"
      >
        <div>
          <span
            className="userCard__title"
          >
            Mrs Emily Mortensen 31
          </span>
        </div>
        <div
          className="bold"
        >
          <span>
            blackwolf380
          </span>
        </div>
        <div>
          <span>
            emily.mortensen@example.com
          </span>
        </div>
        <div>
          <span>
            94033936
          </span>
        </div>
        <div>
          <span>
            92381351
          </span>
        </div>
      </div>
    </div>
    <div
      className="userCard__more"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontWeight": "bold",
          }
        }
        type="button"
      >
        Load more
      </button>
    </div>
  </div>
</div>
`;
